CREATE TABLE IF NOT EXISTS recipe_ingredients
(
    ingredient_id BIGINT NOT NULL,
    recipe_id     BIGINT NOT NULL,
    CONSTRAINT pk_recipe_ingredients PRIMARY KEY (ingredient_id, recipe_id)
);

CREATE TABLE IF NOT EXISTS recipes
(
    id   BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name VARCHAR(255)                            NOT NULL,
    CONSTRAINT pk_recipes PRIMARY KEY (id)
);

ALTER TABLE recipe_ingredients
    ADD CONSTRAINT fk_recing_on_ingredient FOREIGN KEY (ingredient_id) REFERENCES ingredients (id);

ALTER TABLE recipe_ingredients
    ADD CONSTRAINT fk_recing_on_recipe FOREIGN KEY (recipe_id) REFERENCES recipes (id);